update: list devices naive working now
