# controllers.go
@@ -2,6 +2,7 @@ package main
 
 import (
 	"context"
+	"fmt"
 	"log"
 	"sync"
 
@@ -122,5 +123,41 @@ func (c *Controller) SendMessage(username, message, contact, platform string) er
 		}
 		log.Println("Sent message to", room.ID, resp.EventID)
 	}
+	return nil
+}
+
+func (c *Controller) ListDevices(username, platform string) error {
+	clientDb := ClientDB{
+		username: username,
+		filepath: "db/" + username + ".db",
+	}
+	clientDb.Init()
+
+	log.Println("Fetching bridge rooms for", platform)
+	bridges, err := clientDb.FetchBridgeRooms(username)
+	if err != nil {
+		return err
+	}
+
+	if len(bridges) == 0 {
+		return fmt.Errorf("no bridges found for %s", platform)
+	}
+
+	bridge := &Bridges{}
+	for _, _bridge := range bridges {
+		if _bridge.Name == platform {
+			bridge = _bridge
+			bridge.Client = c.Client
+			break
+		}
+	}
+
+	log.Println("Found bridge:", bridge.Name)
+
+	err = bridge.ListDevices()
+	if err != nil {
+		return err
+	}
+
 	return nil
 }
